kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-app
spec:
  selector:
    matchLabels:
      app: netflix-app
  template:
    metadata:
      labels:
        app: netflix-app
    spec:
      containers:
      - name: netflix-app
        image: matheus-nicolay/netflix-clone-react-app:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
