kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app
spec:
  selector:
    app: netflix-app
  ports:
  - port: 80
    targetPort: 80
