kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - nclone.nmatheus.cloud
      secretName: netflix-app-tls
  rules:
  - host: nclone.nmatheus.cloud
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: netflix-app
              port:
                number: 80
